# support-agent-saas

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/support_agent_saas/: __init__.py  cli.py  core.py
tests/: test_core.py
